cabal-version:       2.4

name:                abm-particle-filter
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
category:            Math
extra-source-files:  CHANGELOG.md

library
    exposed-modules:
        Data.PMMH

    hs-source-dirs:   src
    other-modules:
    default-language: Haskell2010
    build-depends:
        base,
        hmatrix-sundials,
        hmatrix,
        katip,
        bytestring,
        vector,
        random,
        QuickCheck,
        random-fu,
        Cabal,
        inline-r,
        mtl

executable ode-model
  main-is:             ode-model.hs
  build-depends:       base,
                       hmatrix-sundials,
                       hmatrix,
                       katip,
                       bytestring,
                       vector,
                       random,
                       QuickCheck,
                       random-fu,
                       Cabal,
                       inline-r,
                       mtl
  default-language:    Haskell2010
